--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -10,5 +10,14 @@
 
 "skipButton": "Skip",
 "nextButton": "Next",
-"startButton": "Start"
+"startButton": "Start",
+
+"agents": "A G E N T S",
+"tiers" : "T I E R S",
+"weapons" : "W E A P O N S",
+"skins" : "S K I N S",
+"bundles" : "B U N D L E S",
+"cards" : "C A R D S",
+"sprays" : "S P R A Y S",
+"logout" : "L O G O U T"
 }
