--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -10,5 +10,14 @@
 
 "skipButton": "Atla",
 "nextButton": "İleri",
-"startButton": "Başlat"
+"startButton": "Başlat",
+
+"agents": "A J A N L A R",
+"tiers": "R A N K L A R",
+"weapons": "S İ L A H L A R",
+"skins": "K A P L A M A L A R",
+"bundles": "P A  K E T L E R",
+"cards": "K A R T L A R",
+"sprays": "S P R E Y L E R",
+"logout": "Ç I K I Ş"
 }
