agents syfası ile gents info sayfası birleştirildi. 4 sayfa 2 sayfa yapıldı

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -19,5 +19,6 @@
 "bundles" : "B U N D L E S",
 "cards" : "C A R D S",
 "sprays" : "S P R A Y S",
-"logout" : "L O G O U T"
+"logout" : "L O G O U T",
+"maps" : "M A P S"
 }
