--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -19,5 +19,6 @@
 "bundles": "P A  K E T L E R",
 "cards": "K A R T L A R",
 "sprays": "S P R E Y L E R",
-"logout": "Ç I K I Ş"
+"logout": "Ç I K I Ş",
+"maps": "H A R I T A L A R"
 }
